<resources>
    <string name="app_name">TwoActivities</string>
    <string name="activity2_name">Second Activity</string>
    <string name="EnterYourMessageHere">Enter Your Message Here</string>
    <string name="button_main">Send</string>
    <string name="button_second">Reply</string>
    <string name="text_header">Message Received</string>
    <string name="EnterYourReplyHere">Enter Your Reply Here</string>
    <string name="text_header_reply">Reply Received</string>
    <string name="please_enter_a_message_to_be_sent">Please enter a message to be sent</string>
</resources>
